--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 
 #Ignore Spring to avoid conflicts between Spring and Git when usind Guard
 /spring/*.pid
+
+# Ignore uploaded test images.
+/public/uploads
